public/styles/home.css
main {
    overflow: hidden;
}

#homeHero {
    color: var(--clr-beige);
    font-size: var(--fs-body-big);
    display: flex;
    justify-content: space-between;
    font-family: "arpona", serif;
    background-color: var(--clr-regular-blue);
}

#homeHero h1 {
    font-size: var(--fs-title);
    color: var(--clr-white);
    font-weight: 400;
}

.heroTextContainer {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-flow: column;
    gap: var(--flex-gap);
    max-width: 653px;
}



.heroImgContainer {
    display: flex;
    gap: 32px;
    height: 591px;
}

.heroImgCard {
    width: 400px;
    height: 591px;
    background-size: cover;
}

.heroImgCard:nth-child(1) {
    margin-right: calc(81px + 13%);
}

.heroImgCard:nth-child(2) {
    position: absolute;
    right: -13%;
    opacity: .5;
}

.button {
    padding: var(--p-button);
    font-size: var(--fs-body-big);
    border-radius: 4px;
    text-decoration: none;
    font-family: "arpona", serif;
}

.transparentBtn {
    color: var(--clr-beige);
    background-color: inherit;
    border: 2px var(--clr-beige) solid;
}

.fullBtn {
    color: var(--clr-black);
    background-color: var(--clr-beige);
    border: 2px var(--clr-beige) solid;

}

.fullBtn:hover {
    color: var(--clr-black);
    background-color: var(--clr-white);
}

.transparentBtn:hover {
    background-color: var(--clr-black);
    color: var(--clr-white);
    border: 2px var(--clr-black) solid;

}

#homeRecommandations {
    display: flex;
    flex-flow: column;
    align-items: flex-start;
    justify-content: center;
    gap: var(--flex-gap);
}

.housingContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 32px;
}

h2 {
    font-size: var(--fs-subtitle);
    font-family: "arpona", serif;
    font-weight: 400;
}
#homeServices {
    display: flex;
    gap: var(--flex-gap);
    align-items: center;
    justify-content: center;
    background-color: var(--clr-light-blue);
}

#homeServices h3 {
    color: var(--clr-white);
    font-size: var(--fs-subtitle);
    font-family: "arpona", serif;
    font-weight: 400;
}


#homeServices > * {
    display: flex;
    flex-flow: column;
    align-items: center;
}


@media only screen and (max-width: 1320px) {
    #homeServices {
        flex-flow: column;
    }

    .heroImgContainer {
        display: none;
    }

    #homeHero {
        position: relative;
        background-image: url("https://static.wixstatic.com/media/5d0cb1_4b077f93a2df451c9bbc69ab3cd27791~mv2.jpg");
    }

    #homeHero::after {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: var(--clr-regular-blue);
        z-index: 1;
        opacity: .8;
    }

    .heroTextContainer,
    .heroImgContainer {
        position: relative;
        z-index: 2;
    }
}

@media only screen and (max-width: 780px) {
    #homeHero {
        background-size: cover;
    }
    .heroImgContainer {
        display: none;
    }
    #homeServices img {
        width: 150px;
    }


}

